# agar-man

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  tailwind.config.js  vite.config.ts  webpack.config.js
agar-man/: Cargo.toml  download_1grams.sh
agar-man/data/: .gitignore
agar-man/pkg/: agar_man.d.ts  agar_man.js  agar_man_bg.wasm  agar_man_bg.wasm.d.ts  package.json
agar-man/src/: dictionary_counts.txt  dictionary_prep.rs  grid_solve.rs  lib.rs  trie_solve.rs
src/: App.tsx  lib.rs  main.css  main.rs  main.tsx
src/components/: Poem.tsx
src/pages/: Search.tsx  Share.tsx
