[package]
name = "agar-man"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/lib.rs"

[profile.release]
debug = true
lto = true
opt-level = "s"

[dependencies]
console_error_panic_hook = "0.1.7"
flame = "0.2.2"
indicatif = "0.16.2"
smol_str = "0.1.21"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.56"
features = [ "console" ]  # Do you have this line in your Cargo.toml?
