[package]
name = "agar-man"
version = "0.1.0"
edition = "2021"
wasm-opt = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "rust-src/lib.rs"

[profile.release]
debug = true
lto = true
opt-level = 3

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.56"
features = [ "console" ]  # Do you have this line in your Cargo.toml?

[features]
