[package]
name = "agar-man"
version = "0.1.0"
edition = "2021"
wasm-opt = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/lib.rs"

[profile.release]
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1.7"
crumsort = "0.1.0"
glidesort = "0.1.2"
itertools = "0.10.5"
js-sys = "0.3.56"
mimalloc = { version = "0.1.37", default-features = false }
nohash-hasher = "0.2.0"
num-bigint = { version = "0.4.3", features = ["std", "arbitrary"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
pdqsort = "1.0.3"
rug = "1.19.2"
rustc-hash = "1.1.0"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.56"
features = ["console"] # Do you have this line in your Cargo.toml?

[features]
